frontend/tests/errors/ER-036/ambiguous_existence_probe_overload/test.vx
#Box();

&(self)#Box::pick(x:#i32) -> #i32 {
  x
}

&(self)#Box::pick(x:#u32) -> #u32 {
  x
}

&^main() -> #i32 {
  b = #Box();
  b.?pick(1) ? 1 : 0
}
